<resources>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_name">WhirlpoolM1_2</string>
    <string name="Bake">Bake</string>
    <string name="Broil">Broil</string>
    <string name="Cook"> Cook </string>
    <string name="Soften"> Soften </string>
    <string name="Reheat"> Reheat </string>
    <string name="pyroClean"> Self Clean </string>
    <string name="convect"> Convect </string>
    <string name="convectBake"> Convect Bake </string>
    <string name="convectBroil"> Convect Broil </string>
    <string name="convectRoast"> Convect Roast </string>
    <string name="keepWarm"> Keep Warm </string>
    <string name="cycle_resource_convect_bake"> Convect Bake </string>
    <string name="cycle_resource_convect_broil"> Convect Broil </string>
    <string name="cycle_resource_convect_roast"> Convect Roast </string>
    <string name="cycle_resource_keep_warm"> Keep Warm </string>
    <string name="probeBake"> Probe Bake </string>
    <string name="probeBroil"> Probe Broil </string>
    <string name="Convect">Convect</string>
    <string name="convect_bake">Convect\nBake</string>
    <string name="convect_broil">Convect\nBroil</string>
    <string name="grillAndMicrowave">Grill + MW</string>
    <string name="turboGrill">Turbo Grill</string>
    <string name="airFry">AirFry</string>
    <string name="turboGrillAndMicrowave">Turbo Grill + MW</string>
    <string name="forcedAir">Forced Air</string>
    <string name="rapidPreheat">Rapid Preheat</string>
    <string name="bakeAndMicrowave">Bake + MW</string>
    <string name="OvenUpperCavity_CycleSetCommonModeCommonModeBake"> Bake</string>
    <string name="OvenUpperCavity_CycleSetCommonModeCommonModeBroil">Broil</string>
    <string name="OvenLowerCavity_CycleSetCommonModeCommonModeBake"> Bake </string>
    <string name="OvenLowerCavity_CycleSetCommonModeCommonModeBroil">Broil</string>
    <string name="OvenLowerCavity_CycleSetCommonModeCommonModeConvect">Convect Bake</string>
    <string name="OvenUpperCavity_CycleSetCommonModeCommonModeConvectBake">Convect Bake</string>
    <string name="OvenUpperCavity_CycleSetCommonModeCommonModeConvectBroil">Convect Broil</string>
    <string name="OvenLowerCavity_CycleSetCommonModeCommonModeConvectBake">Convect Bake</string>
    <string name="OvenLowerCavity_CycleSetCommonModeCommonModeConvectBroil">Convect Broil</string>
    <string name="OvenUpperCavity_CycleSetCommonModeCommonModeKeepWarm">Keep Warm</string>
    <string name="OvenLowerCavity_CycleSetCommonModeCommonModeKeepWarm">Keep Warm </string>
    <string name="OvenUpperCavity_CycleSetCommonModeCommonModeConvectRoast">Convect Roast</string>
    <string name="OvenLowerCavity_CycleSetCommonModeCommonModeConvectRoast">Convect Roast </string>
    <string name="Mwo_ModeSetCookManual"> Microwave Cook</string>
    <string name="Mwo_ModeSetDefrostManual">Defrost</string>
    <string name="Mwo_ModeSetReheatManual">Reheat</string>
    <string name="cycle_resource_microwave">Microwave</string>
    <string name="cycle_resource_soften">Soften</string>
    <string name="cycle_resource_reheat">Reheat</string>
    <string name="cycle_resource_bakemwo">Convection Bake MWO</string>
    <string name="bakemwo">Convection Bake + Mwo</string>
    <string name="cycle_resource_bake">Bake</string>
    <string name="cycle_resource_broil">Broil</string>
    <string name="cycle_resource_commonmodebake">Bake</string>
    <string name="cycle_resource_commonmodebroil">Broil</string>
    <string name="cycle_resource_commonmodeconvectbake">Convect Bake</string>
    <string name="cycle_resource_commonmodeconvectroast">Convect Roast</string>
    <string name="cycle_resource_commonmodekeepwarm">Keep Warm</string>
    <string name="OvenLowerCavity_CycleSetCommonModeCommonModeDehydration">Dehydrate</string>
    <string name="OvenLowerCavity_CycleSetCommonModeCommonModeAirFry">Air Fry</string>
    <string name="OvenLowerCavity_CycleSetCommonModeCommonModeSlowCook">Slow Cooking</string>
    <string name="cycle_resource_commonmodetoast">Toast</string>
    <string name="cycle_resource_probecommonmodeprobebake">Probe Bake</string>
    <string name="cycle_resource_probecommonmodeprobebroil">Probe Broil</string>
    <string name="cycle_resource_probebake">Probe Bake</string>
    <string name="cycle_resource_probebroil">Probe Broil</string>
    <string name="cycle_resource_cleanpyro">Clean</string>
    <string name="cycle_resource_keepwarm">Keep Warm</string>
    <string name="cycle_resource_breadproof">Proof</string>
    <string name="cycle_resource_convectbake">Convect Bake</string>
    <string name="cycle_resource_convectbroil">Convect Broil</string>
    <string name="cycle_resource_convectroast">Convect Roast</string>
    <string name="cycle_resource_convectbakefoodpizza">Thin Pizza</string>
    <string name="cycle_resource_convectbakefoodfrozenpizza">Frozen Pizza</string>
    <string name="cycle_resource_easyconvectfoodpizza">Thick Pizza</string>
    <string name="cycle_resource_frozen">Frozen Foods</string>
    <string name="cycle_resource_pizza">Pizza</string>
    <string name="cycle_resource_poultry">Poultry</string>
    <string name="cycle_resource_meat">Meat</string>
    <string name="cycle_resource_seafood">Seafood</string>
    <string name="cycle_resource_veggies">Veggies</string>
    <string name="cycle_resource_bakedgoods">Baked Goods</string>
    <string name="cycle_resource_casseroles">Casseroles</string>
    <string name="cycle_resource_toast">Toast</string>
    <string name="cycle_resource_nuts">Nuts</string>
    <string name="cycle_resource_frozenbakefoodpizza">Thick Frozen Pizza</string>
    <string name="cycle_resource_frozenasparagus">Frozen Asparagus</string>
    <string name="cycle_resource_frozenbrocoli">Frozen Broccoli</string>
    <string name="cycle_resource_frozenbrusselsprouts">Frozen Brussel Sprouts</string>
    <string name="cycle_resource_buffalowings">Frozen Buffalo Wings</string>
    <string name="cycle_resource_burgers">Burgers</string>
    <string name="cycle_resource_frozenburgers">Frozen Burgers</string>
    <string name="cycle_resource_frozenlasagna">Frozen Lasagna</string>
    <string name="cycle_resource_frozenbutternutsquash">Frozen Butternut Squash</string>
    <string name="cycle_resource_easyconvectfoodfishsticks">Frozen Fish Sticks</string>
    <string name="cycle_resource_frozencustomfoodfrenchfries">Frozen French Fries</string>
    <string name="cycle_resource_frozenbakefoodlasagna">Frozen Lasagna</string>
    <string name="cycle_resource_frozencauliflower">Frozen Cauliflower</string>
    <string name="cycle_resource_easyconvectfoodchickenpieces">Frozen Chicken Breast</string>
    <string name="cycle_resource_frozenbakefoodnuggets">Frozen Chicken Nuggets</string>
    <string name="cycle_resource_frozenroastedpotatoes">Frozen Roasted Potatoes</string>
    <string name="cycle_resource_frozenrolls">Frozen Rolls</string>
    <string name="cycle_resource_frozenslicedcarrots">Frozen Sliced Carrots</string>
    <string name="cycle_resource_frozensweetpotatofries">Frozen Sweet Potato Fries</string>
    <string name="cycle_resource_frozentoasterstrudel">Toaster Strudel</string>
    <string name="cycle_resource_frozenwaffles">Waffles</string>
    <string name="cycle_resource_easyconvectfoodfishfillet">Fish Fillet</string>
    <string name="cycle_resource_jumboshrimp">Jumbo Shrimp</string>
    <string name="cycle_resource_salmonfilet">Salmon Fillet</string>
    <string name="cycle_resource_seascallops">Sea Scallops</string>
    <string name="cycle_resource_tunasteak">Tuna Steak</string>
    <string name="cycle_resource_chickenbreast">Fresh Chicken Breast</string>
    <string name="cycle_resource_chickendrumsticks">Chicken Drumsticks</string>
    <string name="cycle_resource_chickenthighs">Chicken Thighs</string>
    <string name="cycle_resource_chickenwings">Chicken Wings</string>
    <string name="cycle_resource_friedchicken">Fried Chicken</string>
    <string name="cycle_resource_turkeybreast">Turkey Burgers</string>
    <string name="cycle_resource_wholechicken">Whole Chicken</string>
    <string name="cycle_resource_bacon">Bacon</string>
    <string name="cycle_resource_beefjerky">Beef Jerky</string>
    <string name="cycle_resource_beefroast">Beef Roast</string>
    <string name="cycle_resource_beef">Beef Steak</string>
    <string name="cycle_resource_lamb">Lamb Chops</string>
    <string name="cycle_resource_lambroast">Lamb Roast</string>
    <string name="cycle_resource_meatloaf">Meatloaf</string>
    <string name="cycle_resource_pork">Pork Chops</string>
    <string name="cycle_resource_porkribs">Pork Ribs</string>
    <string name="cycle_resource_porkroast">Pork Roast</string>
    <string name="cycle_resource_freshsausage">Fresh</string>
    <string name="cycle_resource_frozensausage">Frozen Sausages</string>
    <string name="cycle_resource_acornsquash">Acorn Squash</string>
    <string name="cycle_resource_freshasparagus">Asparagus</string>
    <string name="cycle_resource_easyconvectfoodbakedpotato">Baked Potato</string>
    <string name="cycle_resource_sweetpotato">Baked Sweet Potato</string>
    <string name="cycle_resource_freshbrocoli">Broccoli</string>
    <string name="cycle_resource_freshbrusselsprouts">Brussel Sprouts</string>
    <string name="cycle_resource_freshbutternutsquash">Butternut Squash</string>
    <string name="cycle_resource_babycarrots">Baby</string>
    <string name="cycle_resource_freshslicedcarrots">Sliced</string>
    <string name="cycle_resource_freshcauliflower">Cauliflower</string>
    <string name="cycle_resource_freshfrenchfries">French Fries</string>
    <string name="cycle_resource_mushrooms">Mushrooms</string>
    <string name="cycle_resource_slicedonions">Onions</string>
    <string name="cycle_resource_slicedpeppers">Peppers</string>
    <string name="cycle_resource_freshroastedpotatoes">Roasted Potatoes</string>
    <string name="cycle_resource_roastedsweetpotatoes">Roasted Sweet Potato</string>
    <string name="cycle_resource_freshsweetpotatofries">Sweet Potato Fries</string>
    <string name="cycle_resource_lasagna">Lasagna</string>
    <string name="cycle_resource_freshbagel">Fresh Bagel</string>
    <string name="cycle_resource_frozenbagel">Frozen Bagel</string>
    <string name="cycle_resource_freshenglishmuffin">Fresh</string>
    <string name="text_okay">OK</string>
    <string name="text_set">Set</string>
    <string name="button_text_dismiss">Dismiss</string>
    <string name="common_text_degree_symbol">°</string>
    <string name="cycle_temp_range_title">Baking Temperature Range</string>
    <string name="cycle_temp_range_info">"Bake can only be used with temperatures of 100F - 500F.
Other cooking methods may have different ranges."
    </string>
    <string name="cycle_name_cooking_mode_text">Use [XXX]F with [Cooking Mode Name]</string>
    <string name="text_cooking_cancelled">Cooking cancelled due to reaching cooktime limitation.</string>
    <string name="text_cooking_cancel">Cooking cancelled</string>
    <string name="text_support_appliance_number">Appliance Number:</string>
    <string name="text_support_visit_site">Visit our website:</string>
    <string name="text_support_website_link_prefix">www.whirlpool.com/</string>
    <string name="text_support_website_link_suffix">services/contact-us.html</string>
    <string name="text_support_start_diagostic">Start diagostic</string>
    <string name="text_sw_term_title">Introduction</string>
    <string name="text_wifi_term_title">Scan QR code to the read instructions.</string>
    <string name="text_wifi_term_content">Please read these Terms Of Use carefully, and the Privacy Statement (which is incorporated into these Terms - see below), before using your Connected Appliance and associated software applications and services. Your attention is drawn in particular to section VIII of these Terms of Use which contains restrictions on our liability to you.</string>
</resources>