<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
<!--        <variable-->
<!--            name="clockViewModel"-->
<!--            type="com.whirlpool.hmi.clock.ClockViewModel" />-->
        <variable
            name="cookingVM"
            type="com.whirlpool.hmi.cooking.viewmodel.CookingViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/infoView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:background="@color/common_solid_white">
<!--        android:layout_width="482dp"-->
<!--        android:layout_height="205dp"-->

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="570dp"
            android:layout_height="230dp"
            android:layout_marginStart="22dp"
            android:layout_marginEnd="22dp"
            android:layout_marginBottom="85dp"
            android:src="@drawable/rectangle_cycle_temp_range_info"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/text_view_title_cycle_temp_range"
            style="@style/CycleTemperatureRange"
            android:layout_marginStart="64dp"
            android:layout_marginTop="58dp"
            android:text="@string/cycle_temp_range_title"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="@+id/imageView"
            tools:visibility="visible" />


        <TextView
            style="@style/CycleTemperatureRangeInfo"
            android:layout_width="390dp"
            android:layout_height="56dp"
            android:layout_marginStart="64dp"
            android:layout_marginTop="105dp"
            android:text="@string/cycle_temp_range_info"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="@+id/imageView" />

        <ImageView
            android:id="@+id/cycle_mode_yellow_icon"
            android:layout_width="22dp"
            android:layout_height="2dp"
            android:layout_marginStart="64dp"
            android:layout_marginTop="46dp"
            android:background="@drawable/mode_icon"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="@+id/imageView" />

        <TextView
            style="@style/CycleTempCookingModeInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="78dp"
            android:layout_marginTop="47dp"
            android:layout_marginEnd="162dp"
            android:layout_marginBottom="52dp"
            android:text="@string/cycle_name_cooking_mode_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button_dismiss"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
            android:id="@+id/button_dismiss"
            style="@style/Dismiss"
            android:layout_width="108dp"
            android:layout_height="33dp"
            android:layout_marginTop="29dp"
            android:layout_marginEnd="76dp"
            android:layout_marginBottom="36dp"
            android:background="@drawable/decision_button"
            android:text="@string/button_text_dismiss"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>

