<?xml version="1.0"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="settingsViewModel"
            type="com.whirlpool.hmi.settings.SettingsViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_tumbler_background">

        <com.whirlpool.cooking.widgets.header.HeaderSingleIconDoubleText
            android:id="@+id/myappliance_header"
            android:layout_width="480dp"
            android:layout_height="79dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/view_support_service"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/text_website_title_suffix"
                android:layout_width="227dp"
                android:layout_height="30dp"
                android:layout_marginStart="35dp"
                android:layout_marginTop="159dp"
                android:fontFamily="@font/roboto_light"
                android:fontWeight="300"
                android:gravity="start|center_vertical"
                android:includeFontPadding="false"
                android:lineHeight="22.0dp"
                android:text="@string/text_support_website_link_suffix"
                android:textColor="@color/color_whp_text_gray"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:layout_width="17dp"
                android:layout_height="2dp"
                android:layout_marginStart="35dp"
                android:layout_marginTop="79dp"
                android:background="@drawable/background_golddash_rectangle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_appliancenumber_title"
                android:layout_width="173dp"
                android:layout_height="30dp"
                android:layout_marginStart="35dp"
                android:layout_marginTop="87dp"
                android:fontFamily="@font/roboto_regular"
                android:fontWeight="400"
                android:gravity="start|center_vertical"
                android:includeFontPadding="false"
                android:lineHeight="22.0dp"
                android:text="@string/text_support_appliance_number"
                android:textColor="@color/color_whp_text_gray"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_appliance_value"
                android:layout_width="227dp"
                android:layout_height="30dp"
                android:layout_marginStart="210dp"
                android:layout_marginTop="87dp"
                android:fontFamily="@font/roboto_light"
                android:fontWeight="300"
                android:gravity="start|center_vertical"
                android:includeFontPadding="false"
                android:lineHeight="22.0dp"
                android:text='@{settingsViewModel.serialNumber}'
                android:textColor="@color/color_whp_text_gray"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_website_title"
                android:layout_width="173dp"
                android:layout_height="30dp"
                android:layout_marginStart="35dp"
                android:layout_marginTop="123dp"
                android:fontFamily="@font/roboto_regular"
                android:fontWeight="400"
                android:gravity="start|center_vertical"
                android:includeFontPadding="false"
                android:lineHeight="22.0dp"
                android:text="@string/text_support_visit_site"
                android:textColor="@color/color_whp_text_gray"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_website_title_prefix"
                android:layout_width="227dp"
                android:layout_height="30dp"
                android:layout_marginStart="210dp"
                android:layout_marginTop="123dp"
                android:fontFamily="@font/roboto_light"
                android:fontWeight="300"
                android:gravity="start|center_vertical"
                android:includeFontPadding="false"
                android:lineHeight="22.0dp"
                android:text="@string/text_support_website_link_prefix"
                android:textColor="@color/color_whp_text_gray"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <Button
                android:id="@+id/buttons_start_diagostic"
                android:layout_width="193dp"
                android:layout_height="44dp"
                android:layout_marginStart="261dp"
                android:layout_marginTop="250dp"
                android:background="@drawable/background_buttons_buttons_primary"
                android:fontFamily="@font/roboto_bold"
                android:fontWeight="700"
                android:gravity="center_horizontal|center_vertical"
                android:includeFontPadding="false"
                android:lineHeight="20.0dp"
                android:letterSpacing="0"
                android:text="@string/text_support_start_diagostic"
                android:textAllCaps="false"
                android:textColor="@color/color_whp_text_gray"
                android:textSize="20sp"
                app:backgroundTint="@null"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
