<?xml version="1.0"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="480dp"
        android:layout_height="182dp"
        android:background="@drawable/background_fragment_bottomsheet_tile">>

        <FrameLayout
            android:id="@+id/group_1214"
            android:layout_width="418dp"
            android:layout_height="33dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/headline"
                style="@style/W35NumpadRegular30"
                android:layout_width="418dp"
                android:layout_height="33dp"
                android:gravity="left|center_vertical"
                android:text="@string/text_cooking_cancel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </FrameLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/frame_1328"
            android:layout_width="420dp"
            android:layout_height="97dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="61dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/cancel_body"
                style="@style/W35PopupBodyLight20"
                android:layout_width="420dp"
                android:layout_height="44dp"
                android:text="@string/text_cooking_cancelled"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/buttons_primary"
                android:layout_width="100dp"
                android:layout_height="44dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/background_buttons_buttons_primary"
                android:fontFamily="@font/roboto_bold"
                android:fontWeight="700"
                android:gravity="center_horizontal|center_vertical"
                android:includeFontPadding="false"
                android:lineHeight="20.0dp"
                android:textAllCaps="false"
                android:textColor="@color/color_whp_text_gray"
                android:textSize="20sp"
                android:visibility="gone"
                app:backgroundTint="@null"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/button_cta_primary_active"
                style="@style/W35ButtonBold20"
                android:layout_width="100dp"
                android:layout_height="44dp"
                android:layout_marginStart="320dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/background_buttons_button_cta_primary_active"
                android:textAllCaps="false"
                app:backgroundTint="@null"
                android:text="@string/text_okay"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>