<?xml version="1.0"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_tumbler_background">

        <com.whirlpool.cooking.widgets.header.HeaderSingleIconDoubleText
            android:id="@+id/myappliance_header"
            android:layout_width="480dp"
            android:layout_height="79dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/image_qr_placeholder"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="79dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/qrcode"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:id="@+id/wifi_scrollview"
            style="@style/CleanInstructionScroll"
            android:layout_width="260dp"
            android:layout_height="match_parent"
            android:layout_marginStart="196dp"
            android:layout_marginTop="79dp"
            android:layout_marginEnd="5dp"
            android:scrollbarStyle="outsideInset"
            android:scrollbarThumbVertical="@drawable/background_vertical_scrollbar_color"
            android:scrollbarTrackVertical="@drawable/background_vertical_scrollbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/myappliance_header"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <View
                    android:id="@+id/rectangle"
                    android:layout_width="10dp"
                    android:layout_height="2dp"
                    android:background="@drawable/background_golddash_rectangle"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/text_primary_wifi_tc"
                    android:layout_width="244dp"
                    android:layout_height="49dp"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/roboto_light"
                    android:fontWeight="300"
                    android:gravity="start|top"
                    android:includeFontPadding="false"
                    android:lineHeight="22.0dp"
                    android:text="@string/text_wifi_term_title"
                    android:textColor="@color/color_whp_text_gray"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/rectangle_1"
                    android:layout_width="10dp"
                    android:layout_height="2dp"
                    android:layout_marginTop="64dp"
                    android:background="@drawable/background_golddash_rectangle"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/text_wifi_tc_headline"
                    android:layout_width="242dp"
                    android:layout_height="34dp"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/roboto_regular"
                    android:fontWeight="400"
                    android:gravity="start|top"
                    android:includeFontPadding="false"
                    android:lineHeight="32.0dp"
                    android:text="@string/text_sw_term_title"
                    android:textColor="@color/color_whp_text_gray"
                    android:textSize="22sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/rectangle_1" />

                <TextView
                    android:id="@+id/text_wifi_tc_content"
                    android:layout_width="252dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_light"
                    android:fontWeight="300"
                    android:gravity="start|top"
                    android:includeFontPadding="false"
                    android:lineHeight="22.0dp"
                    android:text="@string/text_wifi_term_content"
                    android:textColor="@color/color_whp_text_gray"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_wifi_tc_headline" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
