<?xml version="1.0"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/root_temp_cal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_alabaster">

        <com.whirlpool.cooking.widgets.header.HeaderSingleIconDoubleText
            android:id="@+id/toolsShowAllHeaderBar"
            android:layout_width="480dp"
            android:layout_height="79dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.whirlpool.hmi.uicomponents.widgets.tumblers.BaseTumbler
            android:id="@+id/tumblet_temp_calibration"
            android:layout_width="480dp"
            android:layout_height="124dp"
            android:layout_marginTop="97dp"
            android:gravity="center_horizontal|center_vertical"
            app:baseTumbler_item_divider="@drawable/tumbler_divider"
            app:baseTumbler_item_layoutHeight="70dp"
            app:baseTumbler_item_layoutWidth="180dp"
            app:baseTumbler_item_spacing="15"
            app:baseTumbler_nonSelectedFade="7"
            app:baseTumbler_nonSelectedFadeMode="standard"
            app:baseTumbler_nonSelectedScaleMode="none"
            app:baseTumbler_orientation="horizontal"
            app:baseTumbler_scrollSpeed="5"
            app:baseTumbler_textViewSelectedStyle="@style/StyleTemperatureCalibrationTumblerSelectedTextView"
            app:baseTumbler_textViewStyle="@style/StyleTemperatureCalibrationTumblerNonSelectedTextView"
            app:baseTumbler_textViewSuffixDecoration="@string/common_text_degree_symbol"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_temp_cal_set"
            android:layout_width="90dp"
            android:layout_height="44dp"
            android:layout_marginStart="364dp"
            android:layout_marginTop="250dp"
            android:background="@drawable/background_cta_primary_active"
            android:fontFamily="@font/roboto_bold"
            android:fontWeight="700"
            android:gravity="center_horizontal|center_vertical"
            android:includeFontPadding="false"
            android:lineHeight="20.0dp"
            android:text="@string/text_set"
            android:textAllCaps="false"
            android:textColor="@color/color_whp_text_gray"
            android:textSize="20sp"
            app:backgroundTint="@null"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/icon_30px_placeholder"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="186dp"
            android:layout_marginTop="224dp"
            android:visibility="gone"
            android:contentDescription="@string/app_name"
            android:src="@drawable/icon_40px_placeholder"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_temperature_unit"
            android:layout_width="0dp"
            android:layout_height="22dp"
            android:layout_marginStart="221dp"
            android:layout_marginTop="228dp"
            android:fontFamily="@font/roboto_regular"
            android:fontWeight="400"
            android:gravity="center_horizontal|center_vertical"
            android:includeFontPadding="false"
            android:lineHeight="22.0dp"
            android:textColor="@color/color_whp_text_gray"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
